--- a/readme.org
+++ b/readme.org
@@ -18,10 +18,8 @@
 *** S3 (Not Implemented Yet)
     - If you can't store the files with the server, perhaps because you're using
       something like Heroku to run the application, you'll need to set it up to use
-      Amazon S3
-      1. Add lines to ~conf.lisp~:
+      Amazon S3; add the following lines to ~conf.lisp~
   #+begin_src lisp
   (defparameter *storage-type* :s3)
-  (defparameter *base-path* "<path to folder containing s3 credentials file>/")
+  (defparameter *base-path* "<path to s3 credentials file>")
   #+end_src
-      2. That's it!
