--- a/readme.org
+++ b/readme.org
@@ -11,10 +11,19 @@
    - This is especially useful if you wanted to run a pen-and-paper RPG for your
      friends and have an easy way to share and collaborate information with your
      players
+*** Web Technology
+    - If you're anything like me, having lived your whole life with atrocious rural
+      "internet," then the proliferation of "web apps" over native software is likely
+      to be distasteful
+    - However, for this use case, I believe the benefits (easy cross-platform
+      operation, the ability to work on a project away from home or on your phone
+      without needing to carry around multiple copies of an org document and keep
+      them in sync, the ability to run the software "in the cloud," etc.) outweigh
+      the drawbacks
 ** Hierarchy
-   - From "CLOSOS, Specification of a Lisp operating system" by Robert Strandh :
-     "most things are not naturally hierarchical. A hierarchical organization imposes
-     an artificial order between names. Whether a document is called
+   - From "CLOSOS Specification of a Lisp operating system" by Robert Strandh : "most
+     things are not naturally hierarchical. A hierarchical organization imposes an
+     artificial order between names. Whether a document is called
      ~Lisp/Programs/2013/stuff~, ~Programs/Lisp/2013/stuff~, or something else like
      ~2013/Programs/Lisp/Stuff~, is usually not important."
    - Using org-mode headings to organize information, as most people are wont to do
@@ -25,6 +34,12 @@
      to what you are currently looking at
    - If it's placed under the same heading, sure, it's easy to find. But what if it's
      somewhere else?
+** Lisp
+   - Why is this application written in Common Lisp, a language that no one has cared
+     about for 25 years?
+   - Because it's the language that I prefer, I'm the one who wrote this software,
+     and I wrote it primarily for my own use; if others can find it useful, then
+     please use it! But mass adoption isn't really the goal
 * Setup
   - Make a file ~conf.lisp~ in the main directory with the rest of the source
   - Start ~conf.lisp~ with the following contents
