--- a/readme.org
+++ b/readme.org
@@ -12,9 +12,9 @@
      friends and have an easy way to share and collaborate information with your
      players
 ** Hierarchy
-   - From "CLOSOS Specification of a Lisp operating system" by Robert Strandh : "most
-     things are not naturally hierarchical. A hierarchical organization imposes an
-     artificial order between names. Whether a document is called
+   - From "CLOSOS - Specification of a Lisp operating system" by Robert Strandh :
+     "most things are not naturally hierarchical. A hierarchical organization imposes
+     an artificial order between names. Whether a document is called
      ~Lisp/Programs/2013/stuff~, ~Programs/Lisp/2013/stuff~, or something else like
      ~2013/Programs/Lisp/Stuff~, is usually not important."
    - Using org-mode headings to organize information, as most people are wont to do
