--- a/readme.org
+++ b/readme.org
@@ -1,17 +1,17 @@
 * Spiderweb
   Wiki software built on the idea of creating many interconnecting links between
   ideas, much like a spiderweb
-* Why
+* Justification
   When fantastic tools like Emacs' org-mode already exist for keeping notes, why
   create a new one? There are three primary ways that the spiderweb differs from
-  org-mode
+  org-mode : inter-connectivity, linking vs. hierarchy, and relations
 ** Inter-connectivity
    - The spiderweb wiki is designed to function more like a wiki, so that information
      can easily be accessed by users other than the writer
    - This is especially useful if you wanted to run a pen-and-paper RPG for your
      friends and have an easy way to share and collaborate information with your
      players
-** Hierarchy
+** Linking vs. Hierarchy
    - From "CLOSOS - Specification of a Lisp operating system" by Robert Strandh :
      "most things are not naturally hierarchical. A hierarchical organization imposes
      an artificial order between names. Whether a document is called
