--- a/readme.org
+++ b/readme.org
@@ -92,22 +92,25 @@ http {
 }
 #+end_src
 ** Jquery
-   - If you want Spiderweb Wiki to automatically download and use the correct version
-     of jquery, add the following to ~conf.lisp~
+*** Automatic (Recommended) 
+    - If you want Spiderweb Wiki to automatically download and use the correct version
+      of jquery, add the following to ~conf.lisp~
 #+begin_src lisp
-  (defparameter *jquery-source* :web)
-  (defparameter *jquery-path* nil) ; this variable can be set to an URL if you want 
+(defparameter *jquery-source* :web)
+(defparameter *jquery-path* nil) ; this variable can be set to an URL if you want 
                                    ; to use a different version
 #+end_src
-   - If you want to serve a local copy, add the following instead :
+*** Local
+    - If you want to serve a local copy, add the following instead :
 #+begin_src lisp
 (defparameter *jquery-source* :local)
 (defparameter *jquery-path* "<path to the jquery file.js>")
 #+end_src
-   - If you have /extremely/ limited resources on the server, you could use an
-     external CDN to serve the file
-   - Note that the wiki will cache jquery on clients, so it shouldn't be necessary to
-     use a CDN because of slow internet
+*** External CDN
+    - If you have /extremely/ limited resources on the server, you could use an
+      external CDN to serve the file
+    - Note that the wiki will cache jquery on clients, so it shouldn't be necessary to
+      use a CDN because of slow internet
 #+begin_src lisp
 (defparameter *jquery-source* :cdn)
 (defparameter *jquery-path* "<jquery url>")
