--- a/readme.org
+++ b/readme.org
@@ -1,6 +1,6 @@
 * Introduction
-  A wiki application built on the idea of creating many interconnecting links between
-  ideas, much like a spiderweb
+  A wiki application built around creating many interconnecting links between ideas,
+  much like a spiderweb
 * Org Mode
   When fantastic tools like Emacs' org-mode already exist for keeping notes, why
   create a new one? There are three primary ways that the spiderweb differs from
